🔧: chore Swagger 배포서버 설정 추가 #46